This is days of work... So I don't remember each changes. I will avoid such massive commits in the future. Sorry about that... We can blame deadlines this time, can't we?